# machine_learning

./: .gitignore  README.md  diabetes.py  diabetes_cat.py  iris.py  pyproject.toml
01_iris/: iris.py
01_iris_diabetes/: diabetes.py  diabetes_cat.py  iris.py
02_diabetes/: diabetes_categorical.py  diabetes_continuous.py
02_palas/: PALAS_OPERACOES_2021_01.csv  heatmaps.py
03_euro_soccer/: .env.development  database.py  settings.py
03_euro_soccer/tests/: test_database.py  test_settings.py
03_palas/: PALAS_OPERACOES_2021_01.csv  PALAS_OPERACOES_2021_02.csv  PALAS_OPERACOES_2024_01.csv  heatmaps.py
04_euro_soccer/: .env.test  database.py  main.py  models.py  settings.py  spreadsheet.py  xml.py  xml_functions.py
04_euro_soccer/tests/: conftest.py  test_database.py  test_xml.py
