[tool.poetry]
name = "first-ml"
version = "0.1.0"
description = "Just me learning a little ML"
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
pandas-stubs = "^2.2.3.241126"
seaborn = "^0.13.2"
xgboost = "^2.1.3"
charset-normalizer = "^3.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pynvim = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
